--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,5 +4,25 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './footer.scss';
-@import './media_mixin.scss';
+
+@import 'abstracts/variables';
+@import 'abstracts/mixins';
+
+@import './utils/variables';
+@import './utils/mixins';
+
+@import './base/normalize';
+@import './base/base';
+
+@import 'layout/navigation';
+@import 'layout/header';
+@import 'layout/films-list';
+@import 'layout/footer';
+@import 'layout/forms';
+
+@import './components/_buttons';
+@import './components/_pagination';
+@import './components/_groupmodal';
+
+@import './pages/home';
+@import './pages/mylibrary';
